--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
----
-title: "index"
-author: "Arpita Mukherjee"
+
+
+Assignment link ---> https://arpi15.github.io/Practical_Machine_Learning_Assignment/Practical_Machine_Learning_PeerAssignment.html
