--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-<<<<<<< HEAD
+<html>
 
+<head>
+<title>Practical_Machine_Learning_Assignment</title>
+</head>
 
-Assignment link ---> https://arpi15.github.io/Practical_Machine_Learning_Assignment/Practical_Machine_Learning_PeerAssignment.html
-=======
-Assignment link ---> https://arpi15.github.io/Practical_Machine_Learning_Assignment/Practical_Machine_Learning_PeerAssignment.html
-Read Me link --->
->>>>>>> 063f9acc9f841ac9ae2e0015d392031170dd32bf
+<body>
+
+Home Page
+
+<a href = "https://arpi15.github.io/Practical_Machine_Learning_Assignment/README.html">Readme</a>
+
+<a href = "https://arpi15.github.io/Practical_Machine_Learning_Assignment/Practical_Machine_Learning_PeerAssignment.html">Assignment Link
+
+</body>
+</html>
