--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-Home Page
+<p>Home Page</p>
 
 <a href = "https://arpi15.github.io/Practical_Machine_Learning_Assignment/README.html">Readme</a>
 
