--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-       <title>Practical_Machine_Learning_Assignment</title>
+       <title>indext</title>
     </head>
     <body>
-       <p>Practical_Machine_Learning_Assignment-Home Page</p>
+       <p>Practical Machine Learning Assignment - Home Page</p>
        <p><a href = "https://arpi15.github.io/Practical_Machine_Learning_Assignment/README.html">1.Readme</a></p>
        <p><a href = "https://arpi15.github.io/Practical_Machine_Learning_Assignment/Practical_Machine_Learning_PeerAssignment.html">2.Assignment Link</p>
     </body>
